Allow add/remove transport for cache container. Attribute updates for caches.

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
@@ -239,6 +239,8 @@ subsys_infinispan_distributedCache=Distributed Cache
 subsys_infinispan_stateTransfer=State Transfer
 subsys_infinispan_distributed=Distributed
 subsys_infinispan_aliases=Aliases
+subsys_infinispan_transaction=Transaction
+subsys_infinispan_store=Store
 
 
 #
