Fix AS7-2750: Manage mail subsystem

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
@@ -576,6 +576,11 @@ server_config_desc=Server configuration status. In some cases the configuration 
 
 logout_confirm=Do you really want to logout?
 
+#
+# Mail Subsystem
+#
+subsys_mail_session_desc=Mail session definitions.
+subsys_mail_server_desc=Mail server definitions to used with Mail Session.
 
 
 
