load protocol stacks

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
@@ -583,6 +583,12 @@ subsys_mail_session_desc=Mail session definitions.
 subsys_mail_server_desc=Mail server definitions to used with Mail Session.
 
 
+#
+# jgroups subsystem
+#
+subsys_jgroups_session_desc=The configuration of the jgroups subsystem.
+
+
 
 
 
