--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
@@ -587,6 +587,8 @@ subsys_mail_server_desc=Mail server definitions to used with Mail Session.
 # jgroups subsystem
 #
 subsys_jgroups_session_desc=The configuration of the jgroups subsystem.
+subsys_jgroups_protocol_desc=The configuration of protocols within a protocol stack. The order of protocols does matter.
+subsys_jgroups_transport_desc=The configuration of a transport for a protocol stack.
 
 
 
