use predefined list of protocol names

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
@@ -115,6 +115,8 @@ common_label_plaseWait=Please wait
 common_label_requestProcessed=Your request is being processed ...
 common_label_logout=Logout
 
+common_label_append=Append
+
 #
 # Subsystem specific constants below
 #
@@ -589,6 +591,8 @@ subsys_mail_server_desc=Mail server definitions to used with Mail Session.
 subsys_jgroups_session_desc=The configuration of the jgroups subsystem.
 subsys_jgroups_protocol_desc=The configuration of protocols within a protocol stack. The order of protocols does matter.
 subsys_jgroups_transport_desc=The configuration of a transport for a protocol stack.
+
+
 
 
 
