create jgroups stacks with given list of ordered protocols

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
@@ -598,6 +598,8 @@ subsys_mail_server_desc=Mail server definitions to used with Mail Session.
 subsys_jgroups_session_desc=The configuration of the jgroups subsystem.
 subsys_jgroups_protocol_desc=The configuration of protocols within a protocol stack. The order of protocols does matter.
 subsys_jgroups_transport_desc=The configuration of a transport for a protocol stack.
+subsys_jgroups_step1=Step1: Chose name and transport
+subsys_jgroups_step2=Step2: Specify protocols
 
 
 
