--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_zh_Hans.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_zh_Hans.properties
@@ -1,72 +1,72 @@
-addConfirm=? {0} ??? {1}?
-added=??? {0}
-addingFailed=?? {0} ??
-alreadyAssignedTo={0} ?????? {1}?
-alreadyAssignedToAllGroups={0} ??????????????
-alreadyExists={0} ??????
-available=\ {0} ??
-changeServerStatus=?? {0} ??? {1} ??
-commmon_description_newServerGroup=????????????????????????????????????
-common_validation_heapSize=?????????MB?
-common_validation_notEmptyNoSpace=??????
-common_validation_portOffsetUndefined=??? {0} ? portOffset
-common_validation_requiredField=????????
-createTitle=?? {0}
-deleteConfirm=????? {0}?
-deleteJVM=?? JVM ??
-deleteJVMConfirm=????? JVM ????
-deleteServerConfig=???????
-deleteServerConfigConfirm=????????? {0} ??
-deleteServerGroup=??????
-deleteServerGroupConfirm=???????? {0} ??
-deleteTitle=?? {0}
-deleted=??? {0}
-deletionFailed=?? {0} ??
-deploymentsFor=?? {0} ???
-disableConfirm=?? {0} ?
-enableConfirm=?? {0} ?
-failed=???{0}
-failedToAdd=? {0} ??? {1} ???
-failedToDisable=?? {0} ???
-failedToEnable=?? {0} ???
-failedToRemoveFrom=? {1} ?? {0} ???
-modificationFailed=?? {0} ??
-modified=??? {0}
-modify=?? {0}
-modifyConfirm=????? {0}?
-mustBeDeployableArchive={0} ?????????????
-noServerGroupsSelected=?????????
-removeFromConfirm=? {1} ?? {0}?
-removeProperty=????
-removePropertyConfirm=??????? {0} ??
-removedFrom=? {1} ?? {0}?
-restartRequired=????
-restartRequiredConfirm=??????????????????????
-saveFailed=?? {0} ??
-saved=??? {0}
-savedSettings=???????
-selectServerGroups=??????
-selectServerGroupsFor=? {0} ??????
-server_config_stillRunning=?????????\: {0}
-server_reload_confirm=???????? {0} ???????????
-serversRunningOnHost=?? {0} ????????
-subsys_configadmin_remove=????????
-subsys_configadmin_removeConfirm=?? PID\: {0} ????????
-subsys_jca_err_ds_notEnabled=???????\: {0}
-subsys_jpa_err_mericDisabled=\ {0} ????? Metric
-subsys_messaging=Messaging ???\: {0}
-subsys_naming_failedToLoadJNDIView=?? JNDI ?????
-subsys_osgi_activate=OSGi ????????????? "OK" ?????
-subsys_osgi_activating=????...
-subsys_osgi_cant_start_fragment=???? fragment ({0})?
-subsys_osgi_cant_stop_fragment=???? fragment ({0})?
-subsys_osgi_capabilitiesHelp=Capability ?? OSGi ?????????????? JBoss ??? OSGi ?????????????????????
-subsys_osgi_frameworkPropertiesHelp=OSGi ????????????????????????
-subsys_osgi_removeCapability=?? Capability
-subsys_osgi_removeCapabilityConfirm=?? Capability\: {0}?
-successAdd=? {0} ??? {1}?
-successDisabled=????? {0}?
-successEnabled=????? {0}?
-successful=???{0}
-temporarilyUnavailable=??????????
-unknown_error=????
+addConfirm=\u5C06 {0} \u6DFB\u52A0\u81F3 {1}\uFF1F
+added=\u6DFB\u52A0\u4E86 {0}
+addingFailed=\u6DFB\u52A0 {0} \u5931\u8D25
+alreadyAssignedTo={0} \u5DF2\u7ECF\u5206\u914D\u7ED9\u4E86 {1}\u3002
+alreadyAssignedToAllGroups={0} \u5DF2\u7ECF\u5206\u914D\u7ED9\u4E86\u6240\u6709\u7684\u670D\u52A1\u5668\u7EC4\u3002
+alreadyExists={0} \u5DF2\u7ECF\u5B58\u5728\u4E86\u3002
+available=\ {0} \u53EF\u7528
+changeServerStatus=\u4F60\u8981 {0} \u670D\u52A1\u5668 {1} \u5417\uFF1F
+commmon_description_newServerGroup=\u6839\u636E\u73B0\u6709\u7684\u670D\u52A1\u5668\u7EC4\u521B\u5EFA\u4E00\u4E2A\u65B0\u7684\u670D\u52A1\u5668\u7EC4\u3002\u65B0\u7684\u670D\u52A1\u5668\u7EC4\u5C06\u7EE7\u627F\u73B0\u6709\u7EC4\u7684\u5C5E\u6027\u3002
+common_validation_heapSize=\u8F93\u5165\u6709\u6548\u7684\u5806\u5927\u5C0F\uFF08MB\uFF09
+common_validation_notEmptyNoSpace=\u975E\u7A7A\uFF0C\u975E\u7A7A\u767D
+common_validation_portOffsetUndefined=\u672A\u5B9A\u4E49 {0} \u6216 portOffset
+common_validation_requiredField=\u5FC5\u987B\u586B\u5199\u7684\u5B57\u6BB5\u3002
+createTitle=\u521B\u5EFA {0}
+deleteConfirm=\u771F\u7684\u8981\u5220\u9664 {0}\uFF1F
+deleteJVM=\u5220\u9664 JVM \u8BBE\u7F6E
+deleteJVMConfirm=\u771F\u7684\u8981\u5220\u9664 JVM \u8BBE\u7F6E\u5417\uFF1F
+deleteServerConfig=\u5220\u9664\u670D\u52A1\u5668\u914D\u7F6E
+deleteServerConfigConfirm=\u4F60\u8981\u5220\u9664\u670D\u52A1\u5668\u914D\u7F6E {0} \u5417\uFF1F
+deleteServerGroup=\u5220\u9664\u670D\u52A1\u5668\u7EC4
+deleteServerGroupConfirm=\u4F60\u60F3\u5220\u9664\u670D\u52A1\u5668\u7EC4 {0} \u5417\uFF1F
+deleteTitle=\u5220\u9664 {0}
+deleted=\u5220\u9664\u4E86 {0}
+deletionFailed=\u5220\u9664 {0} \u5931\u8D25
+deploymentsFor=\u7528\u4E8E {0} \u7684\u90E8\u7F72
+disableConfirm=\u7981\u7528 {0} ?
+enableConfirm=\u542F\u7528 {0} ?
+failed=\u5931\u8D25\uFF1A{0}
+failedToAdd=\u5C06 {0} \u6DFB\u52A0\u81F3 {1} \u5931\u8D25\u3002
+failedToDisable=\u7981\u7528 {0} \u5931\u8D25\u3002
+failedToEnable=\u542F\u7528 {0} \u5931\u8D25\u3002
+failedToRemoveFrom=\u4ECE {1} \u5220\u9664 {0} \u5931\u8D25\u3002
+modificationFailed=\u4FEE\u6539 {0} \u5931\u8D25
+modified=\u4FEE\u6539\u4E86 {0}
+modify=\u4FEE\u6539 {0}
+modifyConfirm=\u771F\u7684\u8981\u4FEE\u6539 {0}\uFF1F
+mustBeDeployableArchive={0} \u5FC5\u987B\u662F\u53EF\u90E8\u7F72\u7684\u5F52\u6863\u6587\u4EF6\u540D\u3002
+noServerGroupsSelected=\u6CA1\u6709\u9009\u62E9\u670D\u52A1\u5668\u7EC4\u3002
+removeFromConfirm=\u4ECE {1} \u5220\u9664 {0}\uFF1F
+removeProperty=\u5220\u9664\u5C5E\u6027
+removePropertyConfirm=\u771F\u7684\u8981\u5220\u9664\u5C5E\u6027 {0} \u5417\uFF1F
+removedFrom=\u4ECE {1} \u5220\u9664 {0}\u3002
+restartRequired=\u9700\u8981\u91CD\u542F
+restartRequiredConfirm=\u4FEE\u6539\u8FD9\u4E9B\u8BBE\u7F6E\u540E\u9700\u8981\u91CD\u542F\u3002\u8BF7\u91CD\u65B0\u52A0\u8F7D\u5E94\u7528\u7A0B\u5E8F\u3002
+saveFailed=\u4FDD\u5B58 {0} \u5931\u8D25
+saved=\u4FDD\u5B58\u4E86 {0}
+savedSettings=\u6210\u529F\uFF1A\u4FDD\u5B58\u8BBE\u7F6E
+selectServerGroups=\u9009\u62E9\u670D\u52A1\u5668\u7EC4
+selectServerGroupsFor=\u4E3A {0} \u9009\u62E9\u670D\u52A1\u5668\u7EC4
+server_config_stillRunning=\u670D\u52A1\u5668\u5B9E\u4F8B\u4ECD\u5728\u8FD0\u884C\: {0}
+server_reload_confirm=\u4F60\u771F\u7684\u8981\u4E3A\u670D\u52A1\u5668 {0} \u91CD\u65B0\u52A0\u8F7D\u670D\u52A1\u5668\u914D\u7F6E\u5417\uFF1F
+serversRunningOnHost=\u4E3B\u673A {0} \u4E0A\u7684\u670D\u52A1\u5668\u53EF\u7528\u6027
+subsys_configadmin_remove=\u5220\u9664\u914D\u7F6E\u7BA1\u7406\u6570\u636E
+subsys_configadmin_removeConfirm=\u5220\u9664 PID\: {0} \u7684\u914D\u7F6E\u7BA1\u7406\u6570\u636E\uFF1F
+subsys_jca_err_ds_notEnabled=\u6570\u636E\u6E90\u6CA1\u6709\u542F\u7528\: {0}
+subsys_jpa_err_mericDisabled=\ {0} \u4E0A\u6CA1\u6709\u542F\u7528 Metric
+subsys_messaging=Messaging \u63D0\u4F9B\u8005\: {0}
+subsys_naming_failedToLoadJNDIView=\u52A0\u8F7D JNDI \u4FE1\u606F\u5931\u8D25\u3002
+subsys_osgi_activate=OSGi \u5B50\u7CFB\u7EDF\u672A\u5904\u4E8E\u6D3B\u52A8\u72B6\u6001\u3002\u70B9\u51FB "OK" \u6765\u6FC0\u6D3B\u5B83\u3002
+subsys_osgi_activating=\u6B63\u5728\u6FC0\u6D3B...
+subsys_osgi_cant_start_fragment=\u65E0\u6CD5\u542F\u52A8 fragment ({0})\u3002
+subsys_osgi_cant_stop_fragment=\u65E0\u6CD5\u505C\u6B62 fragment ({0})\u3002
+subsys_osgi_capabilitiesHelp=Capability \u662F\u5728 OSGi \u5B50\u7CFB\u7EDF\u542F\u52A8\u65F6\u52A0\u8F7D\u6216\u53EF\u9009\u542F\u52A8\u7684 JBoss \u6A21\u5757\u6216 OSGi \u5305\u3002\u5B83\u4EEC\u7684\u542F\u52A8\u7EA7\u522B\u8BBE\u7F6E\u4E86\u4ED6\u4EEC\u4F55\u65F6\u5C06\u88AB\u542F\u52A8\u3002
+subsys_osgi_frameworkPropertiesHelp=OSGi \u6846\u67B6\u5C5E\u6027\u3002\u4F60\u9700\u8981\u91CD\u542F\u6846\u67B6\u4EE5\u4F7F\u8FD9\u4E9B\u5C5E\u6027\u7684\u4FEE\u6539\u751F\u6548\u3002
+subsys_osgi_removeCapability=\u5220\u9664 Capability
+subsys_osgi_removeCapabilityConfirm=\u5220\u9664 Capability\: {0}?
+successAdd=\u5C06 {0} \u6DFB\u52A0\u81F3 {1}\u3002
+successDisabled=\u6210\u529F\uFF1A\u542F\u7528 {0}\u3002
+successEnabled=\u6210\u529F\uFF1A\u542F\u7528 {0}\u3002
+successful=\u6210\u529F\uFF1A{0}
+temporarilyUnavailable=\u4E34\u65F6\u4E0D\u53EF\u7528\uFF0C\u8BF7\u518D\u8BD5\u3002
+unknown_error=\u672A\u77E5\u9519\u8BEF
