AS7-2751 modcluster feature

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIDebugConstants.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIDebugConstants.properties
@@ -57,3 +57,5 @@ debug_label_edit_formToolStrip=editBtnFormToolStrip
 debug_label_delete_formToolStrip=deleteBtnFormToolStrip
 debug_label_cancel_formToolStrip=cancelBtnFormToolStrip
 debug_label_add_listEditor=addBtnListEditor
+debug_label_add_modclusterView=addBtnModclusterView
+debug_label_remove_modclusterView=removeBtnModclusterView
