--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <ballroom.version>1.2.0.Final</ballroom.version>
+        <ballroom.version>1.1.0-SNAPSHOT</ballroom.version>
         <console.profile>jboss</console.profile>
         <product.version>7.1</product.version>
 
