sync translations: modcluster additions

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_zh_Hans.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_zh_Hans.properties
@@ -52,8 +52,8 @@ common_label_interfaces=\u63A5\u53E3
 common_label_item=\u6761\u76EE
 common_label_key=\u952E
 common_label_lazyActivation=Lazy \u6FC0\u6D3B
-common_label_manageDeployments=\u7BA1\u7406\u90E8\u7F72
 common_label_logout=Logout
+common_label_manageDeployments=\u7BA1\u7406\u90E8\u7F72
 common_label_messageDetail=\u6D88\u606F\u7EC6\u8282
 common_label_messageDetailTitle=\u6D88\u606F
 common_label_messages=\u6D88\u606F
@@ -357,6 +357,7 @@ subsys_messaging_jms_provider=JMS \u63D0\u4F9B\u8005
 subsys_messaging_jms_provider_desc=JMS \u63D0\u4F9B\u8005\u914D\u7F6E\u3002
 subsys_messaging_queue_metric_desc=\u7528\u4E8E JMS \u961F\u5217\u7684\u5EA6\u91CF\u3002
 subsys_messaging_topic_metric_desc=\u7528\u4E8E JMS \u4E3B\u9898\u7684\u5EA6\u91CF\u3002
+subsys_modcluster_desc=The modcluster configuration.
 subsys_naming_jndiBindings=JNDI \u7ED1\u5B9A
 subsys_naming_jndiView=JNDI \u89C6\u56FE
 subsys_naming_selectedURI=\u9009\u62E9\u7684 URI\uFF1A
@@ -420,4 +421,4 @@ subsys_ws_endpoints=\u7AEF\u70B9
 subsys_ws_provider=\u63D0\u4F9B\u8005
 subys_tx_desc=\u4E8B\u52A1\u5B50\u7CFB\u7EDF\u7684\u914D\u7F6E\u3002
 subys_tx_metric_desc=\u8FD9\u4E9B\u5EA6\u91CF\u53CD\u6620\u4E86\u4E8B\u52A1\u5B50\u7CFB\u7EDF\u7684\u5F53\u524D\u72B6\u6001\u3002\u5982\u679C\u6CA1\u6709\u663E\u793A\u4EFB\u4F55\u5EA6\u91CF\uFF0C\u4F60\u53EF\u80FD\u9700\u8981\u542F\u7528\u4E8B\u52A1\u5B50\u7CFB\u7EDF\u7684\u7EDF\u8BA1\u3002
-subys_web_metric_desc=\u7528\u4E8E Web \u5B50\u7CFB\u7EDF\u7684\u5EA6\u91CF\u3002
+subys_web_metric_desc=\u7528\u4E8E Web \u5B50\u7CFB\u7EDF\u7684\u5EA6\u91CF\u3002Metrics for the web subsystem.
