Fix AS7-3931: prevent changes to enabled datasources

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages.properties
@@ -70,3 +70,4 @@ successEnabled=Success: enabled {0}.
 successful=Success: {0}
 temporarilyUnavailable=Temporarily unavailable, please try again.
 unknown_error=Unknown Error
+subsys_jca_err_ds_enabled=The Data Source {0} is still enabled. Please disabled it, to make changes to the configuration.
