prevent creation of XA datasources w/o connection properties

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
@@ -254,3 +254,4 @@ subsys_security_typeField=Type
 subsys_threads_sizing=Sizing
 subsys_ws_endpoints=Endpoints
 subsys_ws_provider=Provider
+subsys_jca_err_prop_required=At least one XA property is required (i.e. url).
