synchronize message bundles

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_zh_Hans.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_zh_Hans.properties
@@ -181,7 +181,7 @@ subsys_ejb3_threadPoolMaxThreads=\u6700\u5927\u7684\u7EBF\u7A0B\u6570
 subsys_ejb3_threadPools=EJB3 \u7EBF\u7A0B\u6C60
 subsys_ejb3_threadpools_desc=EJB \u670D\u52A1\u5F15\u7528\u7684\u7EBF\u7A0B\u6C60\u914D\u7F6E\u3002
 subsys_ejb3_timerService=\u5B9A\u65F6\u5668\u670D\u52A1
-subsys_ejb3_timerServicePath=\u8DEF\u5F84
+subsys_ejb3_timerServicePath=\u8DEF\u5F84subsys_infinispan_local_cache_desc=A set of infinispan local caches.
 subsys_ejb3_timerServiceRelativeTo=\u76F8\u5BF9\u8FDE\u63A5
 subsys_infinispan_aliases=\u522B\u540D
 subsys_infinispan_aquireTimeout=Aquire \u8D85\u65F6\u6570\u636E\uFF08\u6BEB\u79D2\uFF09
