Fix for JBPAPP-8312 and JBPAPP-8259

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_zh_Hans.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_zh_Hans.properties
@@ -52,6 +52,9 @@ server_reload_confirm=\u4F60\u771F\u7684\u8981\u4E3A\u670D\u52A1\u5668 {0} \u91C
 serversRunningOnHost=\u4E3B\u673A {0} \u4E0A\u7684\u670D\u52A1\u5668\u53EF\u7528\u6027
 subsys_configadmin_remove=\u5220\u9664\u914D\u7F6E\u7BA1\u7406\u6570\u636E
 subsys_configadmin_removeConfirm=\u5220\u9664 PID\: {0} \u7684\u914D\u7F6E\u7BA1\u7406\u6570\u636E\uFF1F
+subsys_configadmin_addNoPIDselected=TRANSLATE ME: Please select a PID before adding a value
+subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
+subsys_configadmin_removeOnLastValueConfirm=TRANSLATE ME: No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
 subsys_jca_err_ds_notEnabled=\u6570\u636E\u6E90\u6CA1\u6709\u542F\u7528\: {0}
 subsys_jpa_err_mericDisabled=\ {0} \u4E0A\u6CA1\u6709\u542F\u7528 Metric
 subsys_messaging=Messaging \u63D0\u4F9B\u8005\: {0}
