--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages.properties
@@ -50,8 +50,11 @@ selectServerGroupsFor=Select server groups for {0}
 server_config_stillRunning=The server instance is still running: {0}
 server_reload_confirm=Do you want ot reload the server configuration for server {0}?
 serversRunningOnHost=Server availability on host: {0}
+subsys_configadmin_addNoPIDselected=Please select a PID before adding a value
 subsys_configadmin_remove=Remove Configuration Admin Data
 subsys_configadmin_removeConfirm=Remove Configuration Admin Data for PID: {0}?
+subsys_configadmin_oneValueRequired=A Configuration Admin PID must at least have one Configuration Value.
+subsys_configadmin_removeOnLastValueConfirm=No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
 subsys_jca_err_ds_notEnabled=Datasource not enabled: {0}
 subsys_jpa_err_mericDisabled=Metric not enabled on {0}
 subsys_messaging=Messaging Provider: {0}
