synchronize message properties

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_zh_Hans.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_zh_Hans.properties
@@ -50,11 +50,12 @@ selectServerGroupsFor=\u4E3A {0} \u9009\u62E9\u670D\u52A1\u5668\u7EC4
 server_config_stillRunning=\u670D\u52A1\u5668\u5B9E\u4F8B\u4ECD\u5728\u8FD0\u884C\: {0}
 server_reload_confirm=\u4F60\u771F\u7684\u8981\u4E3A\u670D\u52A1\u5668 {0} \u91CD\u65B0\u52A0\u8F7D\u670D\u52A1\u5668\u914D\u7F6E\u5417\uFF1F
 serversRunningOnHost=\u4E3B\u673A {0} \u4E0A\u7684\u670D\u52A1\u5668\u53EF\u7528\u6027
-subsys_configadmin_remove=\u5220\u9664\u914D\u7F6E\u7BA1\u7406\u6570\u636E
-subsys_configadmin_removeConfirm=\u5220\u9664 PID\: {0} \u7684\u914D\u7F6E\u7BA1\u7406\u6570\u636E\uFF1F
 subsys_configadmin_addNoPIDselected=TRANSLATE ME: Please select a PID before adding a value
 subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
+subsys_configadmin_remove=\u5220\u9664\u914D\u7F6E\u7BA1\u7406\u6570\u636E
+subsys_configadmin_removeConfirm=\u5220\u9664 PID\: {0} \u7684\u914D\u7F6E\u7BA1\u7406\u6570\u636E\uFF1F
 subsys_configadmin_removeOnLastValueConfirm=TRANSLATE ME: No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
+subsys_jca_err_ds_enabled=The Data Source {0} is still enabled. Please disabled it, to make changes to the configuration.
 subsys_jca_err_ds_notEnabled=\u6570\u636E\u6E90\u6CA1\u6709\u542F\u7528\: {0}
 subsys_jpa_err_mericDisabled=\ {0} \u4E0A\u6CA1\u6709\u542F\u7528 Metric
 subsys_messaging=Messaging \u63D0\u4F9B\u8005\: {0}
@@ -72,4 +73,4 @@ successDisabled=\u6210\u529F\uFF1A\u542F\u7528 {0}\u3002
 successEnabled=\u6210\u529F\uFF1A\u542F\u7528 {0}\u3002
 successful=\u6210\u529F\uFF1A{0}
 temporarilyUnavailable=\u4E34\u65F6\u4E0D\u53EF\u7528\uFF0C\u8BF7\u518D\u8BD5\u3002
-unknown_error=\u672A\u77E5\u9519\u8BEF
+unknown_error=\u672A\u77E5\u9519\u8BEFUnknown Error
