fix message bundles

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_zh_Hans.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_zh_Hans.properties
@@ -186,23 +186,28 @@ subsys_ejb3_timerServiceRelativeTo=\u76F8\u5BF9\u8FDE\u63A5
 subsys_infinispan_aliases=\u522B\u540D
 subsys_infinispan_aquireTimeout=Aquire \u8D85\u65F6\u6570\u636E\uFF08\u6BEB\u79D2\uFF09
 subsys_infinispan_cache_container=\u7F13\u5B58\u5BB9\u5668
+subsys_infinispan_cache_container_desc=A set of infinispan cache containers.
 subsys_infinispan_cache_containers=\u7F13\u5B58\u5BB9\u5668
 subsys_infinispan_cluster=\u7FA4\u96C6
 subsys_infinispan_concurrencyLevel=\u5E76\u884C\u7EA7\u522B
 subsys_infinispan_default_cache=\u7F3A\u7701\u7F13\u5B58
 subsys_infinispan_distributed=\u5206\u5E03\u7684
 subsys_infinispan_distributedCache=\u5206\u5E03\u5F0F\u7F13\u5B58
+subsys_infinispan_distributed_cache_desc=A set of infinispan distributed caches.
 subsys_infinispan_eviction=\u9010\u51FA
 subsys_infinispan_evictionExecutor=Eviction Executor
 subsys_infinispan_evictionStrategy=\u9010\u51FA\u7B56\u7565
 subsys_infinispan_expiration=\u8FC7\u671F
 subsys_infinispan_invalidationCache=\u5931\u6548\u6027\u7F13\u5B58
+subsys_infinispan_invalidation_cache_desc=A set of infinispan invalidation caches.
 subsys_infinispan_isolation=\u9694\u79BB
 subsys_infinispan_jndiName=JNDI \u540D\u79F0
 subsys_infinispan_listenerExecutor=Listener Executor
 subsys_infinispan_localCache=\u672C\u5730\u7F13\u5B58
+subsys_infinispan_local_cache_desc=A set of infinispan local caches.
 subsys_infinispan_locking=\u9501
 subsys_infinispan_replicatedCache=\u590D\u5236\u6027\u7F13\u5B58
+subsys_infinispan_replicated_cache_desc=A set of infinispan replicated caches.
 subsys_infinispan_replicationQueueExecutor=\u961F\u5217\u590D\u5236 Executor
 subsys_infinispan_stateTransfer=\u72B6\u6001\u8F6C\u79FB
 subsys_infinispan_striping=Striping
