--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <name>JBoss 7 - Management Console</name>
     <groupId>org.jboss.as</groupId>
     <artifactId>jboss-as-console-parent</artifactId>
-    <version>1.1.0.FINAL</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <description>JBoss AS 7 Management Console</description>
