preapre windows test automation

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,7 @@ gui/war/WEB-INF
 gui/war/app
 gui/war/dmr_gwt
 gui/src/main/java/org/jboss/as/console/App.gwt.xml
+gui/src/main/java/gwt-proxy.properties
+gui/src/main/java/upload-proxy.properties
 
 gui/generated
