cleanup and finish the bind address switch (see README.txt)

--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -283,7 +283,7 @@
 
                     <execution>
                         <id>custom.styles</id>
-                        <phase>process-resources</phase>
+                        <phase>process-sources</phase>
                         <configuration>
                             <tasks>
 
