synchronize message bundles

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_zh_Hans.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_zh_Hans.properties
@@ -427,3 +427,5 @@ subsys_ws_provider=\u63D0\u4F9B\u8005
 subys_tx_desc=\u4E8B\u52A1\u5B50\u7CFB\u7EDF\u7684\u914D\u7F6E\u3002
 subys_tx_metric_desc=\u8FD9\u4E9B\u5EA6\u91CF\u53CD\u6620\u4E86\u4E8B\u52A1\u5B50\u7CFB\u7EDF\u7684\u5F53\u524D\u72B6\u6001\u3002\u5982\u679C\u6CA1\u6709\u663E\u793A\u4EFB\u4F55\u5EA6\u91CF\uFF0C\u4F60\u53EF\u80FD\u9700\u8981\u542F\u7528\u4E8B\u52A1\u5B50\u7CFB\u7EDF\u7684\u7EDF\u8BA1\u3002
 subys_web_metric_desc=\u7528\u4E8E Web \u5B50\u7CFB\u7EDF\u7684\u5EA6\u91CF\u3002Metrics for the web subsystem.
+help_need_help=Need Help?
+help_close_help=Close
