--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.jboss.as</groupId>
         <artifactId>jboss-as-console-parent</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
