--- a/testsuite/smoke/pom.xml
+++ b/testsuite/smoke/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.jboss.as</groupId>
         <artifactId>jboss-as-console-testsuite</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
