--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -341,27 +341,18 @@
             </plugin>
 
             <plugin>
-                <groupId>org.jboss.ballroom</groupId>
-                <artifactId>code-generator</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>1.0-alpha-4</version>
                 <executions>
-                <execution>
-                    <phase>generate-sources</phase>
-                    <goals>
-                        <goal>process-template</goal>
-                    </goals>
-                    <id>Generate Plugins Module</id>
-                    <configuration>
-                        <!-- "true" is the default value, so this could be omitted-->
-                        <!-- available since version 1.1 -->
-                        <addToBuildPath>true</addToBuildPath>
-                        <targetFile>${project.build.directory}/classes/org/jboss/as/console/client/core/gin/PluginsModule.java</targetFile>
-                        <template>src/main/templates/PluginsModule.tmpl</template>
-                        <entries>
-                            <entry>org.jboss.ballroom.decorator.GinDecorator</entry>
-                        </entries>
-                    </configuration>
-                </execution>
+                    <execution>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <factory>org.jboss.as.console.plugins.ProcessorFactory</factory>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
 
