retain reflections based approach

--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -356,6 +356,29 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.jboss.ballroom</groupId>
+                <artifactId>code-generator</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <executions>
+                <execution>
+                    <phase>generate-sources</phase>
+                    <goals>
+                        <goal>process-template</goal>
+                    </goals>
+                    <id>Generate Plugins Module</id>
+                    <configuration>
+                        <addToBuildPath>true</addToBuildPath>
+                        <targetFile>${project.build.directory}/classes/org/jboss/as/console/client/core/gin/PluginsModule.java</targetFile>
+                        <template>src/main/templates/PluginsModule.tmpl</template>
+                        <entries>
+                            <entry>org.jboss.ballroom.decorator.GinDecorator</entry>
+                        </entries>
+                    </configuration>
+                </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
